Fixing up queries, scripts, portfolio image sizes on mobile

--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -19,6 +19,7 @@
 .skills {
 	h2 {
 		margin-top: 80px;
+		margin-bottom: 40px;
 	}
 
 	h3 {
@@ -30,7 +31,7 @@
 .skill {
 	text-align: center;
 	width: 15%;
-	margin: 40px 0;
+	margin: 20px 0;
 
 	.skillIcon {
 		color: black;
