--- a/sass/_portfolio.scss
+++ b/sass/_portfolio.scss
@@ -1,8 +1,4 @@
 .portfolioContent {
-
-	h2 {
-		margin: 50px 0;
-	}
 	
 	section:nth-of-type(even) {
 	
