--- a/sass/_queries.scss
+++ b/sass/_queries.scss
@@ -11,7 +11,7 @@
 			top: 0;
 			left: 0;
 			padding: 40px 20px 20px 40px;
-			background: white;
+			background: rgba(255, 255, 255, 0.85);
 			z-index: 1;
 			text-align: center;
 
@@ -21,6 +21,7 @@
 			// top: 23vh;
 
 			#menuIcon {
+				display: block;
 				cursor: pointer;
 				position: relative;
 				z-index: 10000;
@@ -128,7 +129,8 @@
 	.skillsItems {
 		
 		h3 {
-			font-size: 0.6rem;
+			font-size: 0.8rem;
+			line-height: 1.6rem;
 		}
 
 		.skill {
@@ -333,7 +335,7 @@
 
 			h3 {
 				font-size: 1rem;
-				margin-bottom: 1rem;
+				line-height: 1.8rem;
 				width: 100%;
 			}
 		}
@@ -349,7 +351,6 @@
 			top: 0;
 			left: 0;
 			padding: 20px 20px 20px 0;
-			background: white;
 			z-index: 1;
 
 			#menuIcon {
@@ -383,6 +384,11 @@
 		display: block;
 	}
 }
+
+	.portfolioImage {
+		width: 100%;
+		height: 250px;
+	}
 
 //this removes the link margin from the nth-of-type selectors
 .portfolioContent {
